test/type/fail/nonexistent_type_method_args.j
class A { Void main(B b) { return; } }
